[package]
name = "dradisheader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.1"
regex = "1.5.5"
colored = "2.0.0"
rayon = "1.5.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
strip = true
panic = "abort"